--- a/MyFavoriteScriptCommand/MyFavoriteScriptCommand.csproj
+++ b/MyFavoriteScriptCommand/MyFavoriteScriptCommand.csproj
@@ -45,6 +45,8 @@
     <Compile Include="Core\IScene.cs" />
     <Compile Include="Core\ISceneContext.cs" />
     <Compile Include="Core\SceneLoop.cs" />
+    <Compile Include="Scenes\NotImplementedScene.cs" />
+    <Compile Include="Scenes\SelectedDoNotBeSillyDusknoirScene.cs" />
     <Compile Include="Tips.ConsoleApp\ConsoleEx.cs" />
     <Compile Include="IChoice.cs" />
     <Compile Include="Program.cs" />
