--- a/MyFavoriteScriptCommand/MyFavoriteScriptCommand.csproj
+++ b/MyFavoriteScriptCommand/MyFavoriteScriptCommand.csproj
@@ -24,7 +24,7 @@
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
     <PlatformTarget>AnyCPU</PlatformTarget>
-    <DebugType>pdbonly</DebugType>
+    <DebugType>none</DebugType>
     <Optimize>true</Optimize>
     <OutputPath>bin\Release\</OutputPath>
     <DefineConstants>TRACE</DefineConstants>
@@ -53,6 +53,7 @@
     <Compile Include="Core\Messages\NoChoice.cs" />
     <Compile Include="Core\Messages\YesChoice.cs" />
     <Compile Include="Scenes\MethodOfOperationScene.cs" />
+    <Compile Include="Tips.ConsoleApp\AssemblyInfo.cs" />
     <Compile Include="Tips.ConsoleApp\ConsoleEx.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
